--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Brain Dump
+email: kchun@terpmail.umd.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+  Personal website for keeping track of little projects, art experiments, and crafts.
+github_username: kaychun29
+minimal_mistakes_skin: dirt
 search: true
 
 # Build settings
