--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ plugins:
 
 author:
   name   : "Kayla Chun"
-  avatar : "/assets/images/kchun_headshot.jpg"
+  avatar : "/assets/images/kchun_headshot.png"
   bio    : "Cat dad, rock climber, and grad student exploring arts in their spare time."
   links:
     - label: "GitHub"
