--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: kchun@terpmail.umd.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website for keeping track of little projects, art experiments, and crafts.
 github_username: kaychun29
-minimal_mistakes_skin: dirt
+minimal_mistakes_skin: sunrise
 search: true
 
 # Build settings
