--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/luh.chunk"
-    - label: "Google Scholar:
+    - label: "Google Scholar"
       icon: "ai ai-fw ai-google-scholar-square"
       url: "https://scholar.google.com/citations?user=yA2CxYAAAAAJ&hl=en&oi=ao"
 
