--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/luh.chunk"
     - label: "Google Scholar"
-      icon: "ai ai-fw ai-google-scholar-square"
+      icon: "ai ai-google-scholar-square ai-3x"
       url: "https://scholar.google.com/citations?user=yA2CxYAAAAAJ&hl=en&oi=ao"
 
 footer:
@@ -78,7 +78,7 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/luh.chunk"
     - label: "Google Scholar"
-      icon: "ai ai-fw ai-google-scholar-square"
+      icon: "ai ai-google-scholar-square ai-3x"
       url: "https://scholar.google.com/citations?user=yA2CxYAAAAAJ&hl=en&oi=ao"
 
 defaults:
