--- a/_config.yml
+++ b/_config.yml
@@ -57,14 +57,14 @@ plugins:
 author:
   name   : "Kayla Chun"
   avatar : "/assets/images/kchun_headshot.png"
-  bio    : "Cat dad, rock climber, and grad student exploring nature and art in their spare time."
+  bio    : "Cat dad, rock climber, and artist."
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/kaychun29"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/luh.chunk"
+      url: "https://instagram.com/2sensi5u"
     - label: "Google Scholar"
       icon: "ai ai-google-scholar-square ai-3x"
       url: "https://scholar.google.com/citations?user=yA2CxYAAAAAJ&hl=en&oi=ao"
@@ -76,7 +76,7 @@ footer:
       url: "https://github.com/kaychun29"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/luh.chunk"
+      url: "https://instagram.com/2sensi5u"
     - label: "Google Scholar"
       icon: "ai ai-google-scholar-square ai-3x"
       url: "https://scholar.google.com/citations?user=yA2CxYAAAAAJ&hl=en&oi=ao"
